--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server/index.js",
-    "dev": "export NODE_ENV=development; webpack serve & nodemone./server/index.js",
+    "dev": "export NODE_ENV=development; webpack serve & nodemon ./server/server.js",
     "build": "export NODE_ENV=production; webpack"
   },
   "repository": {
@@ -21,13 +21,15 @@
   },
   "homepage": "https://github.com/focusFitness/focusFitnessProject#readme",
   "dependencies": {
+    "axios": "^1.2.1",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.5",
